Fill form width overflow problem fixed

--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -40,9 +40,9 @@
     fieldset {
       display: block;
       width: 100%;
-      border: 1px solid red;
       margin-top: 50px;
       width: 100%;
+      border: none;
 
       legend {
         font-size: 20px;
@@ -52,7 +52,6 @@
 
       label {
         textarea {
-          border: 1px solid red;
           width: 100%;
         }
       }
